--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Back-end for managing users and transactions",
   "main": "dist/app.js",
   "scripts": {
+    "start": "NODE_ENV=DEV node dist/app.js",
     "watchDebug": "tsc -w & NODE_ENV=DEV nodemon dist/app.js",
     "debug": "tsc && NODE_ENV=DEV node dist/app.js",
     "watchRelease": "tsc -w & NODE_ENV=PROD nodemon dist/app.js",
     "release": "tsc && NODE_ENV=PROD node dist/app.js",
+    "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
