--- a/package.json
+++ b/package.json
@@ -26,18 +26,16 @@
   ],
   "author": "sungvzer",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@types/asciify": "^1.3.30",
     "@types/express": "^4.17.13",
+    "@types/mysql2": "github:types/mysql2",
     "argon2": "0.28.2",
     "asciify": "^1.3.2",
     "express": "^4.17.1",
-    "typescript": "^4.4.3"
-  },
-  "dependencies": {
-    "@types/argon2": "^0.15.0",
-    "@types/mysql": "^2.15.19",
+    "typescript": "^4.4.3",
     "dotenv": "^10.0.0",
-    "mysql": "^2.18.1"
+    "express-validator": "^6.13.0",
+    "mysql2": "^2.3.2"
   }
 }
