--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
         "sourceMap": true,
         "rootDir": "./src",
         "outDir": "./dist",
+        "target": "ES5",
+        "module": "CommonJS"
     },
     "exclude": [
         "node_modules"
