--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
   "dependencies": {
     "@types/asciify": "^1.3.30",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/mysql2": "github:types/mysql2",
     "argon2": "0.28.2",
     "asciify": "^1.3.2",
-    "express": "^4.17.1",
-    "typescript": "^4.4.3",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "express-validator": "^6.13.0",
-    "mysql2": "^2.3.2"
+    "get-routes": "^2.1.5",
+    "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.3.2",
+    "typescript": "^4.4.3"
   }
 }
