--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "get-routes": "^2.1.5",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.2",
+    "redis": "^4.0.0-rc.3",
     "typescript": "^4.4.3"
   }
 }
