--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mysql2": "github:types/mysql2",
     "argon2": "0.28.2",
-    "asciify": "^1.3.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
@@ -41,6 +40,8 @@
     "mysql2": "^2.3.2",
     "nodemon": "2.0.14",
     "redis": "^4.0.0-rc.3",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "@types/validator": "^13.7.0",
+    "validator": "13.7.0"
   }
 }
