--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mysql2": "github:types/mysql2",
+    "@types/redis": "^2.8.32",
+    "@types/validator": "^13.7.0",
     "argon2": "^0.28.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -41,7 +43,6 @@
     "nodemon": "^2.0.15",
     "redis": "^4.0.0-rc.3",
     "typescript": "^4.4.3",
-    "@types/validator": "^13.7.0",
     "validator": "^13.7.0"
   }
 }
