--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watchRelease": "tsc -w & NODE_ENV=PROD nodemon dist/app.js",
     "release": "tsc && NODE_ENV=PROD node dist/app.js",
     "watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest  --detectOpenHandles --verbose"
   },
   "repository": {
     "type": "git",
@@ -27,21 +27,29 @@
   "author": "sungvzer",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/asciify": "^1.3.30",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mysql2": "github:types/mysql2",
     "@types/redis": "^2.8.32",
+    "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.0",
     "argon2": "^0.28.2",
+    "babel-jest": "^27.4.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "get-routes": "^2.1.5",
+    "jest": "^27.4.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.15",
     "redis": "^4.0.0-rc.3",
+    "supertest": "^6.1.6",
     "typescript": "^4.4.3",
     "validator": "^13.7.0"
   }
