App: separate route definition and launching

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "project-aurora",
   "version": "1.0.0",
   "description": "Back-end for managing users and transactions",
-  "main": "dist/app.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "NODE_ENV=DEV node dist/app.js",
-    "watchDebug": "tsc -w & NODE_ENV=DEV nodemon dist/app.js",
-    "debug": "tsc && NODE_ENV=DEV node dist/app.js",
-    "watchRelease": "tsc -w & NODE_ENV=PROD nodemon dist/app.js",
-    "release": "tsc && NODE_ENV=PROD node dist/app.js",
+    "start": "NODE_ENV=DEV node dist/server.js",
+    "watchDebug": "tsc -w & NODE_ENV=DEV nodemon dist/server.js",
+    "debug": "tsc && NODE_ENV=DEV node dist/server.js",
+    "watchRelease": "tsc -w & NODE_ENV=PROD nodemon dist/server.js",
+    "release": "tsc && NODE_ENV=PROD node dist/server.js",
     "watch": "tsc -w",
     "test": "jest  --detectOpenHandles --verbose"
   },
