--- a/package.json
+++ b/package.json
@@ -1,56 +1,58 @@
 {
-  "name": "project-aurora",
-  "version": "1.0.0",
-  "description": "Back-end for managing users and transactions",
-  "main": "dist/server.js",
-  "scripts": {
-    "start": "NODE_ENV=DEV node dist/server.js",
-    "watchDebug": "tsc -w & NODE_ENV=DEV nodemon dist/server.js",
-    "debug": "tsc && NODE_ENV=DEV node dist/server.js",
-    "watchRelease": "tsc -w & NODE_ENV=PROD nodemon dist/server.js",
-    "release": "tsc && NODE_ENV=PROD node dist/server.js",
-    "watch": "tsc -w",
-    "test": "jest --detectOpenHandles --runInBand --forceExit --bail"
-  },
-  "repository": {
-    "type": "git",
-    "url": "project-aurora"
-  },
-  "keywords": [
-    "backend",
-    "users",
-    "transactions",
-    "restful",
-    "rest",
-    "api"
-  ],
-  "author": "sungvzer",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-typescript": "^7.16.0",
-    "@types/asciify": "^1.3.30",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^27.0.3",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/mysql2": "github:types/mysql2",
-    "@types/redis": "^2.8.32",
-    "@types/supertest": "^2.0.11",
-    "@types/validator": "^13.7.0",
-    "argon2": "^0.28.2",
-    "babel-jest": "^27.4.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-validator": "^6.13.0",
-    "get-routes": "^2.1.5",
-    "jest": "^27.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.3.2",
-    "nodemon": "^2.0.15",
-    "redis": "^4.0.0-rc.3",
-    "supertest": "^6.1.6",
-    "typescript": "^4.4.3",
-    "validator": "^13.7.0"
-  }
+    "name": "project-aurora",
+    "version": "1.0.0",
+    "description": "Back-end for managing users and transactions",
+    "main": "dist/server.js",
+    "scripts": {
+        "start": "NODE_ENV=DEV node dist/server.js",
+        "watchDebug": "tsc -w & NODE_ENV=DEV nodemon dist/server.js",
+        "debug": "tsc && NODE_ENV=DEV node dist/server.js",
+        "watchRelease": "tsc -w & NODE_ENV=PROD nodemon dist/server.js",
+        "release": "tsc && NODE_ENV=PROD node dist/server.js",
+        "watch": "tsc -w",
+        "test": "jest --detectOpenHandles --runInBand --forceExit --bail"
+    },
+    "repository": {
+        "type": "git",
+        "url": "project-aurora"
+    },
+    "keywords": [
+        "backend",
+        "users",
+        "transactions",
+        "restful",
+        "rest",
+        "api"
+    ],
+    "author": "sungvzer",
+    "license": "ISC",
+    "dependencies": {
+        "@babel/core": "^7.16.0",
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-typescript": "^7.16.0",
+        "@types/asciify": "^1.3.30",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^27.0.3",
+        "@types/jsonwebtoken": "^8.5.5",
+        "@types/mysql2": "github:types/mysql2",
+        "@types/redis": "^2.8.32",
+        "@types/supertest": "^2.0.11",
+        "@types/validator": "^13.7.0",
+        "argon2": "^0.28.2",
+        "babel-jest": "^27.4.1",
+        "cors": "^2.8.5",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-validator": "^6.13.0",
+        "get-routes": "^2.1.5",
+        "jest": "^27.4.1",
+        "jsonwebtoken": "^8.5.1",
+        "mysql2": "^2.3.2",
+        "nodemon": "^2.0.15",
+        "redis": "^4.0.0-rc.3",
+        "supertest": "^6.1.6",
+        "typescript": "^4.4.3",
+        "validator": "^13.7.0"
+    }
 }
