--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,5 @@
         "target": "ES6",
         "module": "CommonJS"
     },
-    "exclude": [
-        "node_modules",
-        "tests"
-    ],
+    "exclude": ["node_modules", "tests"]
 }
