--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@babel/preset-env": "^7.16.4",
         "@babel/preset-typescript": "^7.16.0",
         "@types/asciify": "^1.3.30",
+        "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.0.3",
@@ -41,6 +42,7 @@
         "@types/validator": "^13.7.0",
         "argon2": "^0.28.2",
         "babel-jest": "^27.4.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
