--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@types/jest": "^27.0.3",
         "@types/jsonwebtoken": "^8.5.5",
         "@types/mysql2": "github:types/mysql2",
+        "@types/nodemailer": "^6.4.4",
         "@types/redis": "^2.8.32",
         "@types/supertest": "^2.0.11",
         "@types/validator": "^13.7.0",
@@ -51,6 +52,7 @@
         "jest": "^27.4.1",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.3.2",
+        "nodemailer": "^6.7.2",
         "nodemon": "^2.0.15",
         "redis": "^4.0.0-rc.3",
         "supertest": "^6.1.6",
