--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@types/jest": "^27.0.3",
         "@types/jsonwebtoken": "^8.5.5",
         "@types/mysql2": "github:types/mysql2",
+        "@types/node": "^17.0.6",
         "@types/nodemailer": "^6.4.4",
         "@types/redis": "^2.8.32",
         "@types/supertest": "^2.0.11",
