--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "@types/validator": "^13.7.0",
         "argon2": "^0.28.2",
         "babel-jest": "^27.4.1",
+        "colors": "^1.4.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
