License: add GPL-3.0 license

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "api"
     ],
     "author": "sungvzer",
-    "license": "ISC",
+    "license": "GPL-3.0",
     "dependencies": {
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.4",
