Formatting: add ESLint and convert all strings to single quote

--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
         "@types/redis": "^2.8.32",
         "@types/supertest": "^2.0.11",
         "@types/validator": "^13.7.0",
+        "@typescript-eslint/eslint-plugin": "^5.9.0",
+        "@typescript-eslint/parser": "^5.9.0",
         "argon2": "^0.28.2",
         "babel-jest": "^27.4.1",
         "colors": "^1.4.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
+        "eslint": "^8.6.0",
         "express": "^4.17.1",
         "express-validator": "^6.13.0",
         "get-routes": "^2.1.5",
