Package: add linting script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "watchRelease": "tsc -w & NODE_ENV=PROD nodemon dist/server.js",
         "release": "tsc && NODE_ENV=PROD node dist/server.js",
         "watch": "tsc -w",
-        "test": "jest --detectOpenHandles --runInBand --forceExit --bail"
+        "test": "jest --detectOpenHandles --runInBand --forceExit --bail",
+        "lint": "eslint . -f stylish"
     },
     "repository": {
         "type": "git",
